tree-sitter-razor/test/corpus/html.txt
========
Simple HTML
========

<p>Simple HTML</p>

-----

(compilation_unit
  (element))

===========
HTML with attributes
===========

<p id="foo" class="bar">HTML with attributes</p>
----

(compilation_unit
  (element))

===========
Attribute name with space
===========
<p class="foo bar">HTML with attributes</p>

----

(compilation_unit
  (element))

=========
Self Closing Tag
=========
<input type="text" value="foo" />
----

(compilation_unit
  (element))

====
self closing image tag
====
<img src="foo.jpg" />
----

(compilation_unit
  (element))

===
HTML boolean attribute
===

<input type="checkbox" checked />
---

(compilation_unit
  (element))

===
complex html
===
<itunes:image>http://www.thisdeveloperslife.com/images/logo_full1400.jpg</itunes:image>
---

(compilation_unit
  (element))

=========================
Top level plain text (bare page content)
=========================

Welcome to your new app.

----

(compilation_unit
  (text))

=========================
Top level text after a directive
=========================

@page "/"

Welcome to your new app.

----

(compilation_unit
  (razor_page_directive
    (string_literal
      (string_literal_content)))
  (text))

=========================
Top level text interleaved with an element
=========================

Intro prose.
<p>tag</p>
More prose.

----

(compilation_unit
  (text)
  (element)
  (text))
